--- a/homeworks/homework_4/css/style.css
+++ b/homeworks/homework_4/css/style.css
@@ -2,22 +2,17 @@
 
 * {
     box-sizing: border-box;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-    margin: 0;
-    background-color: black;
-}
-
-.main-container {
-    display: flex;
-    flex-direction: column;
+    background-color: #0d6580;
 }
 
 .header {
     position: fixed;
-    flex: 20%;
-    width: 1200px;
+    width: 100%;
     height: 89px;
     background-color: rgb(37, 53, 121);
     border-top-left-radius: 10px;
@@ -39,18 +34,11 @@ body {
     font-family: 'Playfair Display SC', serif;
 }
 
-.container {
-    display:inline-block;
-    max-width: 1200px;
-    min-height: 89px;
-    background-color: rgb(13, 101, 128);
-}
-
 .side-bar {
-    position: fixed;
+    position: relative;
+    flex: 20%;
     top: 89px;
     width: 300px;
-    height: 600px;
 }
 
 .side-bar__title {
@@ -71,15 +59,17 @@ body {
 
 .main {
     position: absolute;
-    flex: 80%;
-    z-index: 1;
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    height: 100%;
 }
 
 .contacts {
-    margin-left: 300px;
     position: relative;
+    flex: 80%;
     top: 89px;
-    width: 900px;
+    width: 100%;
 }
 
 .contacts__letter {
@@ -92,15 +82,13 @@ body {
     border-bottom-right-radius: 10px;
     top: 89px;
     bottom: 0;
-    margin: 0 auto;
-    width: 900px;
     height: 27px;
     font-size: 18px;
     font-weight: 500;
 }
 
 .contacts__name {
-    margin: 0 60px;
+    margin: 0 40px;
     padding: 10px;
 }
 
@@ -110,32 +98,14 @@ body {
     font-family: 'Arimo';
 }
 
-@media (max-width: 1200px) {
-   .header {
-       width: 100%;
-   }
-}
-
-@media (max-width: 1199px) {
-    .header {
-        width: 100%;
+@media screen and (max-width: 768px) {
+    .title {
+        font-size: 35px;
     }
 }
 
-@media (max-width:991px){
-    .header {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 767px){
-    .header {
-        width: 540px;
-    }
-}
-
-@media screen and (max-width: 575px) {
-    .header {
-        width: 100%;
+@media screen and (max-width: 425px) {
+    .title {
+        font-size: 25px;
     }
 }
